--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
             </div>
             <div class="rating">
                 <img src="https://cdn-icons-png.flaticon.com/128/1791/1791385.png" alt="">
-                <span>Unhappy</span>
+                <span>Neutral</span>
             </div>
             <div class="rating">
                 <img src="https://t3.ftcdn.net/jpg/04/35/81/18/240_F_435811833_vgcdFFKRFBpE4nkqJ1mOCwssBU5c9iLv.jpg" alt="">
-                <span>Unhappy</span>
+                <span>Satisfied</span>
             </div>
         </div>
 
         <button class="btn" id="btn">
-
+            Send Feedback
         </button>
     </div>
     <script src="main.js"></script>
